# text2sql-hiring-demo

./: .env.example  Justfile  README.md  pyproject.toml
.github/workflows/: check-pr-branch.yml
docker/: docker-compose.yml
docker/db/data/: dim_category.csv  dim_product.csv
docker/db/sql/: 01_schema.sql  02_load_data.sql
docker/pgadmin/: servers.json
docs/: examples.yml  instruction.md  test.csv
src/: config.py  main.py
src/database/: __init__.py
src/utils/: __init__.py
tests/: test_database.py
